@@ -16,7 +16,7 @@ DISTCLEANFILES = \
 	intltool-merge		\
 	intltool-update
 
-# Copy all the spec files. Of cource, only one is actually used.
+# Copy all the spec files. Of course, only one is actually used.
 dist-hook:
 	for specfile in *.spec; do \
 		if test -f $$specfile; then \
